--- a/Denizen/theme/base.css
+++ b/Denizen/theme/base.css
@@ -22,7 +22,7 @@ html {
 }
 
 body {
-	font-family: Verdana, Arial, sans-serif;
+	font-family: Arial, sans-serif;
 	color: #333333;
 	background-color: #ffffff;
 }
