--- a/Denizen/theme/common.css
+++ b/Denizen/theme/common.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	letter-spacing: -0.2px;
 	font-size: 12px;
 	line-height: normal;
